# Livox-SDK2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  clang_formatter.py
include/: livox_lidar_api.h  livox_lidar_cfg.h  livox_lidar_def.h
samples/: CMakeLists.txt
samples/debug_point_cloud/: CMakeLists.txt  main.cpp
samples/lidar_cmd_observer/: CMakeLists.txt  main.cpp
samples/livox_lidar_quick_start/: CMakeLists.txt  main.cpp
samples/livox_lidar_rmc_time_sync/: CMakeLists.txt  main.cpp  synchro.h
samples/livox_lidar_rmc_time_sync/linux/: synchro.cpp
samples/livox_lidar_rmc_time_sync/win/: synchro.cpp
samples/logger/: CMakeLists.txt  main.cpp
samples/multi_lidars_upgrade/: CMakeLists.txt  main.cpp
sdk_core/: CMakeLists.txt  device_manager.cpp  device_manager.h  livox_lidar_sdk.cpp  params_check.cpp  params_check.h  parse_cfg_file.cpp  parse_cfg_file.h  upgrade_manager.cpp  upgrade_manager.h
sdk_core/base/: command_callback.h  io_loop.cpp  io_loop.h  io_thread.cpp  io_thread.h  logging.cpp  logging.h  noncopyable.h  thread_base.cpp  thread_base.h
sdk_core/comm/: comm_port.cpp  comm_port.h  define.h  generate_seq.cpp  generate_seq.h  protocol.h  sdk_protocol.cpp  sdk_protocol.h
sdk_core/command_handler/: build_request.cpp  build_request.h  command_handler.h  command_impl.cpp  command_impl.h  general_command_handler.cpp  general_command_handler.h  hap_command_handler.cpp  hap_command_handler.h  mid360_command_handler.cpp  mid360_command_handler.h  parse_lidar_state_info.cpp  parse_lidar_state_info.h
sdk_core/data_handler/: data_handler.cpp  data_handler.h
sdk_core/debug_point_cloud_handler/: debug_point_cloud_handler.cpp  debug_point_cloud_handler.h  debug_point_cloud_manager.cpp  debug_point_cloud_manager.h
sdk_core/logger_handler/: file_manager.cpp  file_manager.h  logger_handler.cpp  logger_handler.h  logger_manager.cpp  logger_manager.h
sdk_core/upgrade/: firmware.cpp  firmware.h  (+2 more)
(+17 files in other folders)
